--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,11 +1,11 @@
 spring:
   datasource:
     platform: h2
-    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;MODE=PostgreSQL
     username: maevgal
     password: 12345
     driverClassName: org.h2.Driver
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
